--- a/assets/Document.html
+++ b/assets/Document.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0079)file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/index.html#contact -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/7fd323a7c5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="process1.php">
+    <link rel="stylesheet" href="./Document_files/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="./Document_files/7fd323a7c5.js.download" crossorigin="anonymous"></script><link href="./Document_files/free-v4-shims.min.css" media="all" rel="stylesheet"><link href="./Document_files/free-v4-font-face.min.css" media="all" rel="stylesheet"><link href="./Document_files/free.min.css" media="all" rel="stylesheet">
+    <link rel="stylesheet" href="./Document_files/main.css">
+    <link rel="stylesheet" href="file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/process1.php">
     <title>Document</title>
 </head>
 <body>
@@ -17,16 +17,16 @@
         <div class="wrapnav">
         <ul>
             <li id="resume">
-              <a class="navlink" href="assets/A. Hooker Resume Current.docx"><strong>Resume(download)</strong></a>
+              <a class="navlink" href="file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/assets/A.%20Hooker%20Resume%20Current.docx"><strong>Resume(download)</strong></a>
             </li>
             <li>
-              <a class="navlink" href="#projects"><strong>Projects</strong></a>
+              <a class="navlink" href="file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/index.html#projects"><strong>Projects</strong></a>
             </li>
             <li>
-              <a class="navlink" href="#about"><strong>About</strong></a>
+              <a class="navlink" href="file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/index.html#about"><strong>About</strong></a>
             </li>
             <li>
-              <a class="navlink" href="#contact"><strong>Contact</strong></a>
+              <a class="navlink" href="file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/index.html#contact"><strong>Contact</strong></a>
             </li>
           </ul>
         </div>
@@ -34,7 +34,7 @@
             <!--Name Text-->
             <h1>Austin Hooker</h1>
             <!--img-->
-            <img id="photo" src="assets/Austin and Liv.jpg" alt="Photo of Austin Hooker">
+            <img id="photo" src="./Document_files/Austin and Liv.jpg" alt="Photo of Austin Hooker">
             <!--headline-->
             <h6><b>Software Development Student - Travel Junkie - Family Man</b></h6>
         </div>
@@ -48,7 +48,7 @@
         
         <div class="box">
           <div class="imgBox">
-          <a href="https://athooker.github.io/StoreFront/"><img src="assets/storefront.jpg" alt="StoreFront" height="300" width="300"></a>
+          <a href="https://athooker.github.io/StoreFront/"><img src="./Document_files/storefront.jpg" alt="StoreFront" height="300" width="300"></a>
           </div>
           <a href="https://athooker.github.io/StoreFront/"> 
           <div class="details">
@@ -60,7 +60,7 @@
         <!--img-->
         <div class="box">
           <div class="imgBox">
-          <a href="https://codepen.io/AThooker/pen/bGEWVbz?editors=0100"><img src="assets/disney.jpg" alt="MickeyMouse" height="300" width="300"></a>
+          <a href="https://codepen.io/AThooker/pen/bGEWVbz?editors=0100"><img src="./Document_files/disney.jpg" alt="MickeyMouse" height="300" width="300"></a>
         </div>
         <a href="https://codepen.io/AThooker/pen/bGEWVbz?editors=0100">
         <div class="details">
@@ -72,7 +72,7 @@
         <!--img-->
         <div class="box">
           <div class="imgBox">
-          <a href="https://athooker.github.io/HTML-RegPage/"><img src="assets/regpage.jpg" alt="RegistrationPage" height="300" width="300"></a>
+          <a href="https://athooker.github.io/HTML-RegPage/"><img src="./Document_files/regpage.jpg" alt="RegistrationPage" height="300" width="300"></a>
         </div>
         <a href="https://athooker.github.io/HTML-RegPage/">
         <div class="details">
@@ -83,7 +83,7 @@
           </div>
           <div class="box">
             <div class="imgBox">
-            <a href="https://github.com/AThooker/Gold_Badge_Challenges"><img src="assets/codePic.jpg" alt="StoreFront" height="300" width="300"></a>
+            <a href="https://github.com/AThooker/Gold_Badge_Challenges"><img src="./Document_files/codePic.jpg" alt="StoreFront" height="300" width="300"></a>
             </div>
             <a href="https://github.com/AThooker/Gold_Badge_Challenges"> 
             <div class="details">
@@ -95,7 +95,7 @@
           <!--img-->
           <div class="box">
             <div class="imgBox">
-            <a href="https://www.marvel.com/characters"><img src="assets/blueBadge.jpg" alt="MickeyMouse" height="300" width="300"></a>
+            <a href="https://www.marvel.com/characters"><img src="./Document_files/blueBadge.jpg" alt="MickeyMouse" height="300" width="300"></a>
           </div>
           <a href="https://www.marvel.com/characters">
           <div class="details">
@@ -107,7 +107,7 @@
           <!--img-->
           <div class="box">
             <div class="imgBox">
-            <a href="https://www.imdb.com/title/tt0386676/"><img src="assets/rubberDuck.jpg" alt="RegistrationPage" height="300" width="300"></a>
+            <a href="https://www.imdb.com/title/tt0386676/"><img src="./Document_files/rubberDuck.jpg" alt="RegistrationPage" height="300" width="300"></a>
           </div>
           <a href="https://www.imdb.com/title/tt0386676/">
           <div class="details">
@@ -127,7 +127,7 @@
         <h1>About</h1>
          <p>  Out of high school I believed whole heartedly I would become an MLB baseball player after a few years playing at IU Bloomington. 
            Contrary to my theory, I had reoccurring back issues while at IU and hung up my cleats during my collegiate sophomore season. Naturally, I impulsively felt the need to re-evaluate my entire life. 
-           I transferred to a cheaper school (Indiana University Kokomo, I switched majors (Economics -> Criminal Justice), and I ended up graduating early by taking 21 credit-semesters. 
+           I transferred to a cheaper school (Indiana University Kokomo, I switched majors (Economics -&gt; Criminal Justice), and I ended up graduating early by taking 21 credit-semesters. 
            I was overly eager to get out in the field and work hard at whatever was next.</p>
          <p>  Well there have been quite a few “nexts” on my search for what to do with my life. 
            I’ve been an insurance salesman, a server, an associate instructor for a leadership company, I took up boxing for a year or so, and most recently I tried to join the service but was declined due to my back problems. 
@@ -165,22 +165,22 @@
       </form>
       <!--links to github & linkedIn-->
       <div class="social">
-        <a href="https://github.com/AThooker"><i class="fab fa-github fa-9x"></i></a>
-        <a href="https://www.linkedin.com/in/austin-hooker-60739014a"><i class="fab fa-linkedin fa-9x"></i></a>
+        <a href="https://github.com/AThooker"><i class="fab fa-github fa-9x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/austin-hooker-60739014a"><i class="fab fa-linkedin fa-9x" aria-hidden="true"></i></a>
       </div>
     </section>
       <footer>
         <!--Legal items, navigational items-->
         <!--Legal items, navigational items-->
-     <span>&copy;2020</span>
+     <span>©2020</span>
      <ul id="menuFooter">
-         <li><a href="#">Sitemap</a></li>
+         <li><a href="file:///C:/Users/Olivia%20Lee/Desktop/Gold%20Badge/Portfolio/index.html#">Sitemap</a></li>
          <li>Website by Hooker</li>
      </ul>
     </footer>
     <script> function myFunction() {document.getElementById("frm1").submit();}</script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
-</body>
-</html>
+    <script src="./Document_files/jquery-3.5.1.slim.min.js.download" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="./Document_files/popper.min.js.download" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="./Document_files/bootstrap.min.js.download" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
+
+</body></html>
