fixed brackground / added blue badge

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
           <!--img-->
           <div class="box">
             <div class="imgBox">
-            <a href="https://www.marvel.com/characters"><img src="assets/blueBadge.jpg" alt="MickeyMouse" height="300" width="300"></a>
+            <a href="https://github.com/kalebemery/YipYip22"><img src="assets/blueBadge.jpg" alt="MickeyMouse" height="300" width="300"></a>
           </div>
-          <a href="https://www.marvel.com/characters">
+          <a href="https://github.com/kalebemery/YipYip22">
           <div class="details">
             <div class="content">
               <h1>Blue Badge Challenge</h1></div>
@@ -107,9 +107,9 @@
           <!--img-->
           <div class="box">
             <div class="imgBox">
-            <a href="https://www.imdb.com/title/tt0386676/"><img src="assets/rubberDuck.jpg" alt="RegistrationPage" height="300" width="300"></a>
+            <a href="https://github.com/AThooker/1150CSharp"><img src="assets/redBadge.jpg" alt="RegistrationPage" height="300" width="300"></a>
           </div>
-          <a href="https://www.imdb.com/title/tt0386676/">
+          <a href="https://github.com/AThooker/1150CSharp">
           <div class="details">
             <div class="content">
               <h1>Red Badge Challenge</h1></div>
@@ -126,13 +126,12 @@
         <!--description-->
         <h1>About</h1>
          <p>  Out of high school I believed whole heartedly I would become an MLB baseball player after a few years playing at IU Bloomington. 
-           Contrary to my theory, I had reoccurring back issues while at IU and hung up my cleats during my collegiate sophomore season. Naturally, I impulsively felt the need to re-evaluate my entire life. 
+           Contrary to my theory, I had reoccurring back issues while at IU and hung up my cleats during my collegiate sophomore season. This led me to explore different paths. 
            I transferred to a cheaper school (Indiana University Kokomo, I switched majors (Economics -> Criminal Justice), and I ended up graduating early by taking 21 credit-semesters. 
            I was overly eager to get out in the field and work hard at whatever was next.</p>
-         <p>  Well there have been quite a few “nexts” on my search for what to do with my life. 
-           I’ve been an insurance salesman, a server, an associate instructor for a leadership company, I took up boxing for a year or so, and most recently I tried to join the service but was declined due to my back problems. 
+         <p>  I’ve been an insurance salesman, a server at a restaurant, an associate instructor for a leadership company, I took up boxing for a year or so, I tried to join the service but was declined due to my back problems, and now I am a software engineer. 
            I have pursued jobs in various fields simply out of curiosity, uncertainty, and willingness to learn.</p>
-           <p>  I love to travel. I have been all the way around the world with my fiance. Our most recent trip was to Chamonix, France and Geneva, Switzerland. I have a passion for traveling and hope to continue to do so for a long time. I can honestly say I am happy to have landed in the tech field. I am a lifelong learner in a field that’s always adapting. 
+           <p>  I love to travel. I have been all the way around the world with my fiance. Our most recent trip was to Chamonix, France and Geneva, Switzerland. I have a passion for traveling and hope to continue to do so for a long time. I am excited to be in the tech field, and look forward to where it will take me. I am a lifelong learner in a field that’s always adapting. 
            I’m not positive where it will take me but I am excited to find out</p>
         </div>
       </section>
