--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
           <!--img-->
           <div class="box">
             <div class="imgBox">
-            <a href="https://github.com/AThooker/1150CSharp"><img src="assets/redBadge.jpg" alt="RegistrationPage" height="300" width="300"></a>
+            <a href="https://github.com/AThooker/EagleEye.MVC"><img src="assets/redBadge.jpg" alt="RegistrationPage" height="300" width="300"></a>
           </div>
-          <a href="https://github.com/AThooker/1150CSharp">
+          <a href="https://github.com/AThooker/EagleEye.MVC">
           <div class="details">
             <div class="content">
               <h1>Red Badge Challenge</h1></div>
@@ -138,11 +138,16 @@
       <div class="skillswrap">
         <div class="skills">
           <ul>
-            <li>- All About The Team</li>
-            <li>- Critical Thinker</li>
-            <li>- Problem Solver</li>
-            <li>- Worked In Various Fields</li>
-            <li>- Active Listener</li>
+            <li>C#</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>.Net Framework</li>
+            <li>SQL Experience</li>
+            <li>API, MVC</li>
+            <li>Critical Thinker</li>
+            <li>Team-Oriented</li>
+            <li>Quick Study</li>
+            <li>Communicative</li>
           </ul>
         </div>
       </div>
