--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
            I’m not positive where it will take me but I am excited to find out</p>
         </div>
       </section>
+      <div id="skillsTitle">Skills</div>
       <div class="skillswrap">
         <div class="skills">
+          <div id="tech">Technical</div>
           <ul>
             <li>C#</li>
             <li>HTML5</li>
@@ -144,10 +146,14 @@
             <li>.Net Framework</li>
             <li>SQL Experience</li>
             <li>API, MVC</li>
+          </ul>
+          <div id="soft">Personal</div>
+          <ul>
             <li>Critical Thinker</li>
             <li>Team-Oriented</li>
             <li>Quick Study</li>
             <li>Communicative</li>
+            <li>Customer Service</li>
           </ul>
         </div>
       </div>
