--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="wrapnav">
         <ul>
             <li id="resume">
-              <a class="navlink" href="assets/A. Hooker Resume Current.docx"><strong>Resume(download)</strong></a>
+              <a class="navlink" href="assets/Austin Hooker Resumé(9-8-2020).docx"><strong>Resume(download)</strong></a>
             </li>
             <li>
               <a class="navlink" href="#projects"><strong>Projects</strong></a>
@@ -176,7 +176,7 @@
       <!--links to github & linkedIn-->
       <div class="social">
         <a href="https://github.com/AThooker"><i class="fab fa-github fa-9x"></i></a>
-        <a href="https://www.linkedin.com/in/austin-hooker-60739014a"><i class="fab fa-linkedin fa-9x"></i></a>
+        <a href="https://www.linkedin.com/in/austin-t-hooker/"><i class="fab fa-linkedin fa-9x"></i></a>
       </div>
     </section>
       <footer>
