--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!--Name Text-->
             <h1>Austin Hooker</h1>
             <!--img-->
-            <img id="photo" src="assets/Austin and Liv.jpg" alt="Photo of Austin Hooker">
+            <img id="photo" src="assets/profile.jpg" alt="Photo of Austin Hooker">
             <!--headline-->
             <h6><b>Software Development Student - Travel Junkie - Family Man</b></h6>
         </div>
