--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
           <!--img-->
           <div class="box">
             <div class="imgBox">
-            <a href="https://github.com/AThooker/EagleEye.MVC"><img src="assets/redBadge.jpg" alt="RegistrationPage" height="300" width="300"></a>
+            <a href="https://eagleeyewebmvc20200909094613.azurewebsites.net"><img src="assets/redBadge.jpg" alt="RegistrationPage" height="300" width="300"></a>
           </div>
-          <a href="https://github.com/AThooker/EagleEye.MVC">
+          <a href="https://eagleeyewebmvc20200909094613.azurewebsites.net">
           <div class="details">
             <div class="content">
               <h1>Red Badge Challenge</h1></div>
